Modernize Loot Runes across current versions